--- a/META-INF/mods.toml
+++ b/META-INF/mods.toml
@@ -1,7 +1,27 @@
-modLoader = 'lowcodefml'
-loaderVersion = '[40,)'
-license = 'LicenseRef-'
+modLoader = "lowcodefml"
+loaderVersion = "[40,)"
+license = "LicenseRef-Custom"
 showAsResourcePack = false
-mods = [
-	{ modId = 'mr_stellarity', version = 'v2.0d', displayName = 'Stellarity-Light', description = "Extreme rehaul and expansion of The End! 'We have End Update at home.'", logoFile = 'pack.png', credits="Hex, misode, Bush_King, Brokenemp", itemIcon="minecraft:chorus_flower", logoBlur=false, updateJSONURL = 'https://api.modrinth.com/updates/bZgeDzN8/forge_updates.json', authors = 'kohara', displayURL = 'https://github.com/Siryak/Stellarity-Lite' },
-]
+issueTrackerURL = "https://discord.gg/J6guYAySN8"
+
+[[mods]]
+modId = "stellarity" 
+version = "2.1a"
+displayName = "Stellarity Light"
+displayURL = "https://github.com/Siryak/Stellarity-Lite/"
+description = '''
+Extreme rehaul and expansion of The End!
+'We have End Update at home.'
+'''
+logoFile = "pack.png"
+logoBlur = false
+updateJSONURL = "https://api.modrinth.com/updates/bZgeDzN8/forge_updates.json"
+credits="Hex, misode, Bush_King, Brokenemp, Phoenix"
+authors = "kohara"
+
+[[dependencies.stellarity]]
+	modId="minecraft"
+	mandatory=true
+	versionRange="[1.20,1.20.2]"
+	ordering="AFTER"
+	side="BOTH"
